--- a/game.vcxproj
+++ b/game.vcxproj
@@ -135,15 +135,18 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Doodler.h" />
     <ClInclude Include="include\Const.h" />
+    <ClInclude Include="include\Doodler.h" />
     <ClInclude Include="include\Entity.h" />
     <ClInclude Include="include\Framework.h" />
     <ClInclude Include="include\Monster.h" />
     <ClInclude Include="include\PlatformBasic.h" />
     <ClInclude Include="include\PlatformManager.h" />
     <ClInclude Include="include\Point.h" />
+    <ClInclude Include="include\Projectile.h" />
     <ClInclude Include="include\Rectangle.h" />
+    <ClInclude Include="include\Score.h" />
+    <ClInclude Include="include\SpringBoots.h" />
     <ClInclude Include="JumpPad.h" />
     <ClInclude Include="PlayerManager.h" />
     <ClInclude Include="Projectile.h" />
@@ -151,7 +154,20 @@
     <ClInclude Include="SpringBoots.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Const.cpp" />
+    <ClCompile Include="Doodler.cpp" />
+    <ClCompile Include="Entity.cpp" />
     <ClCompile Include="game.cpp" />
+    <ClCompile Include="JumpPad.cpp" />
+    <ClCompile Include="Monster.cpp" />
+    <ClCompile Include="PlatformBasic.cpp" />
+    <ClCompile Include="PlatformManager.cpp" />
+    <ClCompile Include="PlayerManager.cpp" />
+    <ClCompile Include="Point.cpp" />
+    <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="Rectangle.cpp" />
+    <ClCompile Include="Score.cpp" />
+    <ClCompile Include="SpringBoots.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
