--- a/game.vcxproj.filters
+++ b/game.vcxproj.filters
@@ -18,9 +18,6 @@
     <ClInclude Include="include\Framework.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="PlayerManager.h">
-      <Filter>Файлы заголовков</Filter>
-    </ClInclude>
     <ClInclude Include="include\Entity.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
@@ -57,49 +54,52 @@
     <ClInclude Include="include\JumpPad.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="include\PlayerManager.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="game.cpp">
-      <Filter>Файлы ресурсов</Filter>
-    </ClCompile>
-    <ClCompile Include="Const.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Doodler.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Entity.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Monster.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="PlatformBasic.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="PlatformManager.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="PlayerManager.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Point.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Projectile.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Rectangle.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="Score.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="SpringBoots.cpp">
-      <Filter>Файлы заголовков\Исходные файлы</Filter>
-    </ClCompile>
-    <ClCompile Include="JumpPad.cpp">
+    <ClCompile Include="include\Score.cpp">
       <Filter>Файлы заголовков</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Doodler.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Const.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Entity.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\game.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\JumpPad.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Monster.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\PlatformBasic.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\PlatformManager.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\PlayerManager.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Point.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Projectile.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\Rectangle.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
+    </ClCompile>
+    <ClCompile Include="include\SpringBoots.cpp">
+      <Filter>Файлы заголовков\Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
